# minirender

./: .gitignore  CMakeLists.txt  README.md  todo
core/: CMakeLists.txt
core/include/: Animator.hpp  Batch.hpp  Camera.hpp  CascadeShadowMap.hpp  Collision.hpp  Config.hpp  Core.hpp  DebugDraw.hpp  Device.hpp  Effects.hpp  Font.hpp  Input.hpp  Manager.hpp  Material.hpp  Math.hpp  Mesh.hpp  Node.hpp  ParticleNode.hpp  Pixmap.hpp  RenderPipeline.hpp  RenderState.hpp  RenderTarget.hpp  Scene.hpp  SceneUBO.hpp  ShadowMap.hpp  TerrainNode.hpp  Tree.hpp  Types.hpp  WaterNode.hpp
core/src/: Animation.cpp  Animator.cpp  Batch.cpp  Camera.cpp  CascadeShadowMap.cpp  Collision.cpp  DebugDraw.cpp  Device.cpp  Effects.cpp  Font.cpp  GBuffer.cpp  GBuffer.hpp  Input.cpp  Material.cpp  Math.cpp  Mesh.cpp  Node.cpp  Node3D.cpp  ParticleNode.cpp  Pixmap.cpp  RenderPipeline.cpp  RenderState.cpp  RenderTarget.cpp  Scene.cpp  SceneUBO.cpp  Shader.cpp  ShadowMap.cpp  TerrainNode.cpp  TextureManager.cpp  Tree.cpp  Utils.cpp  Utils.hpp  WaterNode.cpp  pch.h
demos/: CMakeLists.txt
demos/src/: Demo.hpp  DemoBase.hpp  DemoCannonball.hpp  DemoCascade.hpp  DemoCsm.hpp  DemoDeferred.hpp  DemoEffects.hpp  DemoH3D.hpp  DemoManager.hpp  DemoPerformance.hpp  DemoShadow.hpp  DemoSimples.hpp  DemoSinbad.hpp  DemoSponza.hpp  DemoTerrainLod.hpp  DemoWater.hpp  main.cpp
src/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  BinaryStream.cpp  BinaryStream.hpp  Camera.cpp  Camera.hpp  Demo.hpp  DemoBase.hpp  DemoManager.hpp  DemoSimples.hpp  DemoSinbad.hpp  DemoSponza.hpp  Input.hpp  Manager.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  MeshManager.cpp  Node.cpp  Node.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Scene.cpp  Scene.hpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp  Types.hpp  main.cpp  par_shapes.h
tmpo/: Animation.cpp  Math.cpp  Mesh.cpp  main copy 2.cpp  main copy 3.cpp  main copy.cpp  main.cpp
